- Improve MovieDB Project with Redux Enhancement By Relying on SearchParams with It - Add Request Controllers For Aborting Old Requests When Re-Renders - Debouncing Search Queries when Typing - Remove Unnecessary Files - Refactor Code That Cause Unnecessary Re-Renders - Solve Problem of Movie Recurrence when Using The Trick of Increasing The Movies Per Page - Add useSearchNavigate and useDebouncedSearchParams Hooks

--- a/MovieDB-Project-without-Redux/src/index.css
+++ b/MovieDB-Project-without-Redux/src/index.css
@@ -1,42 +1,17 @@
 :root {
   scroll-behavior: smooth;
-  --toastify-font-family: 'Almarai',sans-serif;
 }
 
 body {
-  font-family: 'Almarai',sans-serif;
+  font-family: 'Almarai', sans-serif;
 }
 
-*,*::before,*::after {
+*,
+*::before,
+*::after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
-
-.accordion-button::after {
-  margin-inline-start: auto;
-  margin-inline-end: 0;
-}
-
-.bg-hover:hover {
-  background-color: var(--bs-btn-hover-bg)!important;
-}
-
-.underline {
-  background-color: rgba(var(--bs-warning-rgb))!important;
-  width: 11rem;
-  margin-inline: auto;
-  height: 4px;
-}
-
-.food-image {
-  min-height: 10rem;
-  width: 15rem;
-  max-width: 40%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
 }
 
 .bg-custom-brown {
@@ -54,6 +29,6 @@ input[type="search"] {
 }
 
 input[type="search"]:focus {
-  box-shadow: none ;
-  outline:5px solid rgba(var(--bs-danger-rgb));
+  box-shadow: none;
+  outline: 5px solid rgba(var(--bs-danger-rgb));
 }
